--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "elasticsearch": "^2.4.1",
     "log4js": "^0.6.20",
     "xml2js": "^0.4.4",
-    "underscore": "^1.7.0"
+    "underscore": "^1.7.0",
+    "ftp": "^0.3.7",
+    "adm-zip": "^0.4.4",
+    "q": "^1.0.1"
   },
 
   "author": "Andres Lamont"
