--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "underscore": "^1.7.0",
     "ftp": "^0.3.7",
     "adm-zip": "^0.4.4",
-    "q": "^1.0.1"
+    "q": "^1.0.1",
+    "csv-parse": "^0.0.6",
+    "traverse": "^0.6.6"
   },
 
   "author": "Andres Lamont"
